tests/snapshots/formats__bmp__core-4bit.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ core-4bit.bmp — 6×3, 4-bit, BI_RGB  [0x0+0x56]
  ▾ File Header  [0x0+0xe]
      bfType: "BM"  [0x0+0x2]
      bfSize: 86  [0x2+0x4]
      bfReserved1: 0  [0x6+0x2]
      bfReserved2: 0  [0x8+0x2]
      bfOffBits: 0x4a  [0xa+0x4]
  ▾ BITMAPCOREHEADER — 6×3, 4-bit, BI_RGB  [0xe+0xc]
      biSize: 12 — BITMAPCOREHEADER  [0xe+0x4]
      bcWidth: 6  [0x12+0x2]
      bcHeight: 3  [0x14+0x2]
      bcPlanes: 1  [0x16+0x2]
      bcBitCount: 4  [0x18+0x2]
  ▾ Palette — 16 colors  [0x1a+0x30]
      [0]: "#00ff00"  [0x1a+0x3]
      [1]: "#01ef10"  [0x1d+0x3]
      [2]: "#02df20"  [0x20+0x3]
      [3]: "#03cf30"  [0x23+0x3]
      [4]: "#04bf40"  [0x26+0x3]
      [5]: "#05af50"  [0x29+0x3]
      [6]: "#069f60"  [0x2c+0x3]
      [7]: "#078f70"  [0x2f+0x3]
      [8]: "#087f80"  [0x32+0x3]
      [9]: "#096f90"  [0x35+0x3]
      [10]: "#0a5fa0"  [0x38+0x3]
      [11]: "#0b4fb0"  [0x3b+0x3]
      [12]: "#0c3fc0"  [0x3e+0x3]
      [13]: "#0d2fd0"  [0x41+0x3]
      [14]: "#0e1fe0"  [0x44+0x3]
      [15]: "#0f0ff0"  [0x47+0x3]
    Pixel array — 3 rows of 0x4 bytes  [0x4a+0xc]
