tests/snapshots/formats__bmp__os2-array.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ os2-array.bmp — OS/2 bitmap array, 2 entries; first: OS/2 color icon, for a 1024×768 display  [0x0+0xe0]
  ▾ Array entry 0 — 4×4, 4-bit, BI_RGB  [0x0+0x78]
      Type: "BA"  [0x0+0x2]
      Header size: 40  [0x2+0x4]
      Next entry offset: 0x78  [0x6+0x4]
      Display width: 1024  [0xa+0x2]
      Display height: 768  [0xc+0x2]
    ▾ File Header  [0xe+0xe]
        usType: "CI" — OS/2 color icon  [0xe+0x2]
        cbSize: 26  [0x10+0x4]
        xHotspot: 2  [0x14+0x2]
        yHotspot: 2  [0x16+0x2]
        offBits: 0xa0  [0x18+0x4]
    ▾ BITMAPCOREHEADER — 4×8, 1-bit, BI_RGB  [0x1c+0xc]
        bcSize: 12 — BITMAPCOREHEADER  [0x1c+0x4]
        bcWidth: 4  [0x20+0x2]
        bcHeight: 8  [0x22+0x2]
        bcPlanes: 1  [0x24+0x2]
        bcBitCount: 1  [0x26+0x2]
    ▾ Palette — 2 colors  [0x28+0x6]
        [0]: "#000000"  [0x28+0x3]
        [1]: "#ffffff"  [0x2b+0x3]
      Pixel array — 8 rows of 4 bytes, bottom-up  [0xa0+0x20]
    ▾ Color bitmap file header  [0x2e+0xe]
        usType: "CI" — OS/2 color icon  [0x2e+0x2]
        cbSize: 26  [0x30+0x4]
        xHotspot: 2  [0x34+0x2]
        yHotspot: 2  [0x36+0x2]
        offBits: 0xc0  [0x38+0x4]
    ▾ BITMAPCOREHEADER — 4×4, 4-bit, BI_RGB  [0x3c+0xc]
        bcSize: 12 — BITMAPCOREHEADER  [0x3c+0x4]
        bcWidth: 4  [0x40+0x2]
        bcHeight: 4  [0x42+0x2]
        bcPlanes: 1  [0x44+0x2]
        bcBitCount: 4  [0x46+0x2]
    ▾ Palette — 16 colors  [0x48+0x30]
        [0]: "#ff0000"  [0x48+0x3]
        [1]: "#ef1010"  [0x4b+0x3]
        [2]: "#df2020"  [0x4e+0x3]
        [3]: "#cf3030"  [0x51+0x3]
        [4]: "#bf4040"  [0x54+0x3]
        [5]: "#af5050"  [0x57+0x3]
        [6]: "#9f6060"  [0x5a+0x3]
        [7]: "#8f7070"  [0x5d+0x3]
        [8]: "#7f8080"  [0x60+0x3]
        [9]: "#6f9090"  [0x63+0x3]
        [10]: "#5fa0a0"  [0x66+0x3]
        [11]: "#4fb0b0"  [0x69+0x3]
        [12]: "#3fc0c0"  [0x6c+0x3]
        [13]: "#2fd0d0"  [0x6f+0x3]
        [14]: "#1fe0e0"  [0x72+0x3]
        [15]: "#0ff0f0"  [0x75+0x3]
      Pixel array — 4 rows of 4 bytes, bottom-up  [0xc0+0x10]
  ▾ Array entry 1 — 2×2, 24-bit, BI_RGB  [0x78+0x68]
      Type: "BA"  [0x78+0x2]
      Header size: 40  [0x7a+0x4]
      Next entry offset: 0x0  [0x7e+0x4]
      Display width: 0  [0x82+0x2]
      Display height: 0  [0x84+0x2]
    ▾ File Header  [0x86+0xe]
        bfType: "BM" — Windows or OS/2 bitmap  [0x86+0x2]
        bfSize: 26  [0x88+0x4]
        bfReserved1: 0  [0x8c+0x2]
        bfReserved2: 0  [0x8e+0x2]
        bfOffBits: 0xd0  [0x90+0x4]
    ▾ BITMAPCOREHEADER — 2×2, 24-bit, BI_RGB  [0x94+0xc]
        bcSize: 12 — BITMAPCOREHEADER  [0x94+0x4]
        bcWidth: 2  [0x98+0x2]
        bcHeight: 2  [0x9a+0x2]
        bcPlanes: 1  [0x9c+0x2]
        bcBitCount: 24  [0x9e+0x2]
      Pixel array — 2 rows of 8 bytes, bottom-up  [0xd0+0x10]
