tests/snapshots/formats__bmp__os2-rle24.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ os2-rle24.bmp — 3×2, 24-bit, RLE24  [0x0+0x64]
  ▾ File Header  [0x0+0xe]
      bfType: "BM" — Windows or OS/2 bitmap  [0x0+0x2]
      bfSize: 100  [0x2+0x4]
      bfReserved1: 0  [0x6+0x2]
      bfReserved2: 0  [0x8+0x2]
      bfOffBits: 0x4e  [0xa+0x4]
  ▾ OS/2 BITMAPINFOHEADER2 — 3×2, 24-bit, RLE24  [0xe+0x40]
      cbFix: 64 — OS/2 BITMAPINFOHEADER2  [0xe+0x4]
      cx: 3  [0x12+0x4]
      cy: 2 — positive: rows stored bottom-up  [0x16+0x4]
      cPlanes: 1  [0x1a+0x2]
      cBitCount: 24  [0x1c+0x2]
      ulCompression: RLE24 (0x4)  [0x1e+0x4]
      cbImage: 22  [0x22+0x4]
      cxResolution: 0  [0x26+0x4]
      cyResolution: 0  [0x2a+0x4]
      cclrUsed: 0  [0x2e+0x4]
      cclrImportant: 0  [0x32+0x4]
      usUnits: 0  [0x36+0x2]
      usReserved: 0  [0x38+0x2]
      usRecording: 0  [0x3a+0x2]
      usRendering: none (0x0)  [0x3c+0x2]
      cSize1: 0  [0x3e+0x4]
      cSize2: 0  [0x42+0x4]
      ulColorEncoding: 0  [0x46+0x4]
      ulIdentifier: 0x1234  [0x4a+0x4]
  ▾ Pixel data — RLE24, 22 bytes  [0x4e+0x16]
      Run — 3 pixels, color #1e140a  [0x4e+0x4]
      End of line — row 0  [0x52+0x2]
      Literal run — 3 pixels, 9 bytes  [0x54+0xc]
      End of line — row 1  [0x60+0x2]
      End of bitmap  [0x62+0x2]
