tests/snapshots/formats__bmp__png-in-bmp.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ png-in-bmp.bmp — 2×2, BI_PNG  [0x0+0x80]
  ▾ File Header  [0x0+0xe]
      bfType: "BM" — Windows or OS/2 bitmap  [0x0+0x2]
      bfSize: 128  [0x2+0x4]
      bfReserved1: 0  [0x6+0x2]
      bfReserved2: 0  [0x8+0x2]
      bfOffBits: 0x36  [0xa+0x4]
  ▾ BITMAPINFOHEADER — 2×2, BI_PNG  [0xe+0x28]
      biSize: 40 — BITMAPINFOHEADER  [0xe+0x4]
      biWidth: 2  [0x12+0x4]
      biHeight: 2 — positive: rows stored bottom-up  [0x16+0x4]
      biPlanes: 1  [0x1a+0x2]
      biBitCount: 0  [0x1c+0x2]
      biCompression: BI_PNG (0x5)  [0x1e+0x4]
      biSizeImage: 74  [0x22+0x4]
      biXPelsPerMeter: 2835 — 72 dpi  [0x26+0x4]
      biYPelsPerMeter: 2835 — 72 dpi  [0x2a+0x4]
      biClrUsed: 0  [0x2e+0x4]
      biClrImportant: 0  [0x32+0x4]
  ▾ Pixel data — 2×2, 8-bit RGB  [0x36+0x4a]
      Signature  [0x36+0x8]
    ▾ IHDR — 2×2, 8-bit RGB  [0x3e+0x19]
        Length: 13  [0x3e+0x4]
        Type: "IHDR" — critical, public, unsafe to copy  [0x42+0x4]
        Width: 2  [0x46+0x4]
        Height: 2  [0x4a+0x4]
        Bit depth: 8  [0x4e+0x1]
        Color type: RGB (0x2)  [0x4f+0x1]
        Compression method: deflate (0x0)  [0x50+0x1]
        Filter method: adaptive (five filter types) (0x0)  [0x51+0x1]
        Interlace method: None (0x0)  [0x52+0x1]
        CRC: 0xfdd49a73 — valid  [0x53+0x4]
    ▾ Image data — 1 IDAT chunk, 17 bytes compressed → 14 bytes of scanlines  [0x57+0x1d]
      ▾ Compressed stream — zlib stream, 17 bytes  [0x5f+0x11]
          CMF: 0x78 — deflate, 32 KiB window  [0x5f+0x1]
          FLG: 0x9c — default compression  [0x60+0x1]
      ▾ Scanlines — 2 rows, 7 bytes each
          Row 0: None (0x0)  [#1:0x0+0x7]
          Row 1: None (0x0)  [#1:0x7+0x7]
      ▾ IDAT — 17 bytes  [0x57+0x1d]
          Length: 17  [0x57+0x4]
          Type: "IDAT" — critical, public, unsafe to copy  [0x5b+0x4]
          Data  [0x5f+0x11]
          CRC: 0x486e3fde — valid  [0x70+0x4]
    ▾ IEND — end of image  [0x74+0xc]
        Length: 0  [0x74+0x4]
        Type: "IEND" — critical, public, unsafe to copy  [0x78+0x4]
        CRC: 0xae426082 — valid  [0x7c+0x4]
