tests/snapshots/formats__bmp__rle4.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ rle4.bmp — 8×2, 4-bit, BI_RLE4  [0x0+0x86]
  ▾ File Header  [0x0+0xe]
      bfType: "BM" — Windows or OS/2 bitmap  [0x0+0x2]
      bfSize: 134  [0x2+0x4]
      bfReserved1: 0  [0x6+0x2]
      bfReserved2: 0  [0x8+0x2]
      bfOffBits: 0x76  [0xa+0x4]
  ▾ BITMAPINFOHEADER — 8×2, 4-bit, BI_RLE4  [0xe+0x28]
      biSize: 40 — BITMAPINFOHEADER  [0xe+0x4]
      biWidth: 8  [0x12+0x4]
      biHeight: 2 — positive: rows stored bottom-up  [0x16+0x4]
      biPlanes: 1  [0x1a+0x2]
      biBitCount: 4  [0x1c+0x2]
      biCompression: BI_RLE4 (0x2)  [0x1e+0x4]
      biSizeImage: 16  [0x22+0x4]
      biXPelsPerMeter: 2835 — 72 dpi  [0x26+0x4]
      biYPelsPerMeter: 2835 — 72 dpi  [0x2a+0x4]
      biClrUsed: 16  [0x2e+0x4]
      biClrImportant: 0  [0x32+0x4]
  ▾ Palette — 16 colors  [0x36+0x40]
      [0]: "#00ff00"  [0x36+0x4]
      [1]: "#08ef10"  [0x3a+0x4]
      [2]: "#10df20"  [0x3e+0x4]
      [3]: "#18cf30"  [0x42+0x4]
      [4]: "#20bf40"  [0x46+0x4]
      [5]: "#28af50"  [0x4a+0x4]
      [6]: "#309f60"  [0x4e+0x4]
      [7]: "#388f70"  [0x52+0x4]
      [8]: "#407f80"  [0x56+0x4]
      [9]: "#486f90"  [0x5a+0x4]
      [10]: "#505fa0"  [0x5e+0x4]
      [11]: "#584fb0"  [0x62+0x4]
      [12]: "#603fc0"  [0x66+0x4]
      [13]: "#682fd0"  [0x6a+0x4]
      [14]: "#701fe0"  [0x6e+0x4]
      [15]: "#780ff0"  [0x72+0x4]
  ▾ Pixel data — BI_RLE4, 16 bytes  [0x76+0x10]
      Run — 8 pixels, indices 1 and 2 alternating  [0x76+0x2]
      End of line — row 0  [0x78+0x2]
      Literal run — 6 pixels, 3 bytes  [0x7a+0x6]
      Run — 2 pixels, indices 15 and 15 alternating  [0x80+0x2]
      End of line — row 1  [0x82+0x2]
      End of bitmap  [0x84+0x2]
