tests/snapshots/formats__bmp__rle8.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ rle8.bmp — 6×4, 8-bit, BI_RLE8  [0x0+0x5e]
  ▾ File Header  [0x0+0xe]
      bfType: "BM" — Windows or OS/2 bitmap  [0x0+0x2]
      bfSize: 94  [0x2+0x4]
      bfReserved1: 0  [0x6+0x2]
      bfReserved2: 0  [0x8+0x2]
      bfOffBits: 0x46  [0xa+0x4]
  ▾ BITMAPINFOHEADER — 6×4, 8-bit, BI_RLE8  [0xe+0x28]
      biSize: 40 — BITMAPINFOHEADER  [0xe+0x4]
      biWidth: 6  [0x12+0x4]
      biHeight: 4 — positive: rows stored bottom-up  [0x16+0x4]
      biPlanes: 1  [0x1a+0x2]
      biBitCount: 8  [0x1c+0x2]
      biCompression: BI_RLE8 (0x1)  [0x1e+0x4]
      biSizeImage: 24  [0x22+0x4]
      biXPelsPerMeter: 2835 — 72 dpi  [0x26+0x4]
      biYPelsPerMeter: 2835 — 72 dpi  [0x2a+0x4]
      biClrUsed: 4  [0x2e+0x4]
      biClrImportant: 0  [0x32+0x4]
  ▾ Palette — 4 colors  [0x36+0x10]
      [0]: "#000000"  [0x36+0x4]
      [1]: "#ff0000"  [0x3a+0x4]
      [2]: "#00ff00"  [0x3e+0x4]
      [3]: "#0000ff"  [0x42+0x4]
  ▾ Pixel data — BI_RLE8, 24 bytes  [0x46+0x18]
      Run — 6 pixels, index 1  [0x46+0x2]
      End of line — row 0  [0x48+0x2]
      Literal run — 3 pixels, 3 bytes  [0x4a+0x6]
      Run — 3 pixels, index 1  [0x50+0x2]
      End of line — row 1  [0x52+0x2]
      Delta — skip 2 pixels right and 1 rows on  [0x54+0x4]
      Run — 4 pixels, index 3  [0x58+0x2]
      End of line — row 2  [0x5a+0x2]
      End of bitmap  [0x5c+0x2]
