tests/snapshots/formats__bmp__testsrc-pal8.bmp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ testsrc-pal8.bmp — 12×8, 8-bit, BI_RGB  [0x0+0x496]
  ▾ File Header  [0x0+0xe]
      bfType: "BM" — Windows or OS/2 bitmap  [0x0+0x2]
      bfSize: 1174  [0x2+0x4]
      bfReserved1: 0  [0x6+0x2]
      bfReserved2: 0  [0x8+0x2]
      bfOffBits: 0x436  [0xa+0x4]
  ▾ BITMAPINFOHEADER — 12×8, 8-bit, BI_RGB  [0xe+0x28]
      biSize: 40 — BITMAPINFOHEADER  [0xe+0x4]
      biWidth: 12  [0x12+0x4]
      biHeight: 8 — positive: rows stored bottom-up  [0x16+0x4]
      biPlanes: 1  [0x1a+0x2]
      biBitCount: 8  [0x1c+0x2]
      biCompression: BI_RGB (0x0)  [0x1e+0x4]
      biSizeImage: 96  [0x22+0x4]
      biXPelsPerMeter: 0  [0x26+0x4]
      biYPelsPerMeter: 0  [0x2a+0x4]
      biClrUsed: 0  [0x2e+0x4]
      biClrImportant: 0  [0x32+0x4]
  ▾ Palette — 256 colors  [0x36+0x400]
      [0]: "#000000"  [0x36+0x4]
      [1]: "#240000"  [0x3a+0x4]
      [2]: "#480000"  [0x3e+0x4]
      [3]: "#6c0000"  [0x42+0x4]
      [4]: "#900000"  [0x46+0x4]
      [5]: "#b40000"  [0x4a+0x4]
      [6]: "#d80000"  [0x4e+0x4]
      [7]: "#fc0000"  [0x52+0x4]
      [8]: "#002400"  [0x56+0x4]
      [9]: "#242400"  [0x5a+0x4]
      [10]: "#482400"  [0x5e+0x4]
      [11]: "#6c2400"  [0x62+0x4]
      [12]: "#902400"  [0x66+0x4]
      [13]: "#b42400"  [0x6a+0x4]
      [14]: "#d82400"  [0x6e+0x4]
      [15]: "#fc2400"  [0x72+0x4]
      [16]: "#004800"  [0x76+0x4]
      [17]: "#244800"  [0x7a+0x4]
      [18]: "#484800"  [0x7e+0x4]
      [19]: "#6c4800"  [0x82+0x4]
      [20]: "#904800"  [0x86+0x4]
      [21]: "#b44800"  [0x8a+0x4]
      [22]: "#d84800"  [0x8e+0x4]
      [23]: "#fc4800"  [0x92+0x4]
      [24]: "#006c00"  [0x96+0x4]
      [25]: "#246c00"  [0x9a+0x4]
      [26]: "#486c00"  [0x9e+0x4]
      [27]: "#6c6c00"  [0xa2+0x4]
      [28]: "#906c00"  [0xa6+0x4]
      [29]: "#b46c00"  [0xaa+0x4]
      [30]: "#d86c00"  [0xae+0x4]
      [31]: "#fc6c00"  [0xb2+0x4]
      [32]: "#009000"  [0xb6+0x4]
      [33]: "#249000"  [0xba+0x4]
      [34]: "#489000"  [0xbe+0x4]
      [35]: "#6c9000"  [0xc2+0x4]
      [36]: "#909000"  [0xc6+0x4]
      [37]: "#b49000"  [0xca+0x4]
      [38]: "#d89000"  [0xce+0x4]
      [39]: "#fc9000"  [0xd2+0x4]
      [40]: "#00b400"  [0xd6+0x4]
      [41]: "#24b400"  [0xda+0x4]
      [42]: "#48b400"  [0xde+0x4]
      [43]: "#6cb400"  [0xe2+0x4]
      [44]: "#90b400"  [0xe6+0x4]
      [45]: "#b4b400"  [0xea+0x4]
      [46]: "#d8b400"  [0xee+0x4]
      [47]: "#fcb400"  [0xf2+0x4]
      [48]: "#00d800"  [0xf6+0x4]
      [49]: "#24d800"  [0xfa+0x4]
      [50]: "#48d800"  [0xfe+0x4]
      [51]: "#6cd800"  [0x102+0x4]
      [52]: "#90d800"  [0x106+0x4]
      [53]: "#b4d800"  [0x10a+0x4]
      [54]: "#d8d800"  [0x10e+0x4]
      [55]: "#fcd800"  [0x112+0x4]
      [56]: "#00fc00"  [0x116+0x4]
      [57]: "#24fc00"  [0x11a+0x4]
      [58]: "#48fc00"  [0x11e+0x4]
      [59]: "#6cfc00"  [0x122+0x4]
      [60]: "#90fc00"  [0x126+0x4]
      [61]: "#b4fc00"  [0x12a+0x4]
      [62]: "#d8fc00"  [0x12e+0x4]
      [63]: "#fcfc00"  [0x132+0x4]
      [64]: "#000055"  [0x136+0x4]
      [65]: "#240055"  [0x13a+0x4]
      [66]: "#480055"  [0x13e+0x4]
      [67]: "#6c0055"  [0x142+0x4]
      [68]: "#900055"  [0x146+0x4]
      [69]: "#b40055"  [0x14a+0x4]
      [70]: "#d80055"  [0x14e+0x4]
      [71]: "#fc0055"  [0x152+0x4]
      [72]: "#002455"  [0x156+0x4]
      [73]: "#242455"  [0x15a+0x4]
      [74]: "#482455"  [0x15e+0x4]
      [75]: "#6c2455"  [0x162+0x4]
      [76]: "#902455"  [0x166+0x4]
      [77]: "#b42455"  [0x16a+0x4]
      [78]: "#d82455"  [0x16e+0x4]
      [79]: "#fc2455"  [0x172+0x4]
      [80]: "#004855"  [0x176+0x4]
      [81]: "#244855"  [0x17a+0x4]
      [82]: "#484855"  [0x17e+0x4]
      [83]: "#6c4855"  [0x182+0x4]
      [84]: "#904855"  [0x186+0x4]
      [85]: "#b44855"  [0x18a+0x4]
      [86]: "#d84855"  [0x18e+0x4]
      [87]: "#fc4855"  [0x192+0x4]
      [88]: "#006c55"  [0x196+0x4]
      [89]: "#246c55"  [0x19a+0x4]
      [90]: "#486c55"  [0x19e+0x4]
      [91]: "#6c6c55"  [0x1a2+0x4]
      [92]: "#906c55"  [0x1a6+0x4]
      [93]: "#b46c55"  [0x1aa+0x4]
      [94]: "#d86c55"  [0x1ae+0x4]
      [95]: "#fc6c55"  [0x1b2+0x4]
      [96]: "#009055"  [0x1b6+0x4]
      [97]: "#249055"  [0x1ba+0x4]
      [98]: "#489055"  [0x1be+0x4]
      [99]: "#6c9055"  [0x1c2+0x4]
      [100]: "#909055"  [0x1c6+0x4]
      [101]: "#b49055"  [0x1ca+0x4]
      [102]: "#d89055"  [0x1ce+0x4]
      [103]: "#fc9055"  [0x1d2+0x4]
      [104]: "#00b455"  [0x1d6+0x4]
      [105]: "#24b455"  [0x1da+0x4]
      [106]: "#48b455"  [0x1de+0x4]
      [107]: "#6cb455"  [0x1e2+0x4]
      [108]: "#90b455"  [0x1e6+0x4]
      [109]: "#b4b455"  [0x1ea+0x4]
      [110]: "#d8b455"  [0x1ee+0x4]
      [111]: "#fcb455"  [0x1f2+0x4]
      [112]: "#00d855"  [0x1f6+0x4]
      [113]: "#24d855"  [0x1fa+0x4]
      [114]: "#48d855"  [0x1fe+0x4]
      [115]: "#6cd855"  [0x202+0x4]
      [116]: "#90d855"  [0x206+0x4]
      [117]: "#b4d855"  [0x20a+0x4]
      [118]: "#d8d855"  [0x20e+0x4]
      [119]: "#fcd855"  [0x212+0x4]
      [120]: "#00fc55"  [0x216+0x4]
      [121]: "#24fc55"  [0x21a+0x4]
      [122]: "#48fc55"  [0x21e+0x4]
      [123]: "#6cfc55"  [0x222+0x4]
      [124]: "#90fc55"  [0x226+0x4]
      [125]: "#b4fc55"  [0x22a+0x4]
      [126]: "#d8fc55"  [0x22e+0x4]
      [127]: "#fcfc55"  [0x232+0x4]
      [128]: "#0000aa"  [0x236+0x4]
      [129]: "#2400aa"  [0x23a+0x4]
      [130]: "#4800aa"  [0x23e+0x4]
      [131]: "#6c00aa"  [0x242+0x4]
      [132]: "#9000aa"  [0x246+0x4]
      [133]: "#b400aa"  [0x24a+0x4]
      [134]: "#d800aa"  [0x24e+0x4]
      [135]: "#fc00aa"  [0x252+0x4]
      [136]: "#0024aa"  [0x256+0x4]
      [137]: "#2424aa"  [0x25a+0x4]
      [138]: "#4824aa"  [0x25e+0x4]
      [139]: "#6c24aa"  [0x262+0x4]
      [140]: "#9024aa"  [0x266+0x4]
      [141]: "#b424aa"  [0x26a+0x4]
      [142]: "#d824aa"  [0x26e+0x4]
      [143]: "#fc24aa"  [0x272+0x4]
      [144]: "#0048aa"  [0x276+0x4]
      [145]: "#2448aa"  [0x27a+0x4]
      [146]: "#4848aa"  [0x27e+0x4]
      [147]: "#6c48aa"  [0x282+0x4]
      [148]: "#9048aa"  [0x286+0x4]
      [149]: "#b448aa"  [0x28a+0x4]
      [150]: "#d848aa"  [0x28e+0x4]
      [151]: "#fc48aa"  [0x292+0x4]
      [152]: "#006caa"  [0x296+0x4]
      [153]: "#246caa"  [0x29a+0x4]
      [154]: "#486caa"  [0x29e+0x4]
      [155]: "#6c6caa"  [0x2a2+0x4]
      [156]: "#906caa"  [0x2a6+0x4]
      [157]: "#b46caa"  [0x2aa+0x4]
      [158]: "#d86caa"  [0x2ae+0x4]
      [159]: "#fc6caa"  [0x2b2+0x4]
      [160]: "#0090aa"  [0x2b6+0x4]
      [161]: "#2490aa"  [0x2ba+0x4]
      [162]: "#4890aa"  [0x2be+0x4]
      [163]: "#6c90aa"  [0x2c2+0x4]
      [164]: "#9090aa"  [0x2c6+0x4]
      [165]: "#b490aa"  [0x2ca+0x4]
      [166]: "#d890aa"  [0x2ce+0x4]
      [167]: "#fc90aa"  [0x2d2+0x4]
      [168]: "#00b4aa"  [0x2d6+0x4]
      [169]: "#24b4aa"  [0x2da+0x4]
      [170]: "#48b4aa"  [0x2de+0x4]
      [171]: "#6cb4aa"  [0x2e2+0x4]
      [172]: "#90b4aa"  [0x2e6+0x4]
      [173]: "#b4b4aa"  [0x2ea+0x4]
      [174]: "#d8b4aa"  [0x2ee+0x4]
      [175]: "#fcb4aa"  [0x2f2+0x4]
      [176]: "#00d8aa"  [0x2f6+0x4]
      [177]: "#24d8aa"  [0x2fa+0x4]
      [178]: "#48d8aa"  [0x2fe+0x4]
      [179]: "#6cd8aa"  [0x302+0x4]
      [180]: "#90d8aa"  [0x306+0x4]
      [181]: "#b4d8aa"  [0x30a+0x4]
      [182]: "#d8d8aa"  [0x30e+0x4]
      [183]: "#fcd8aa"  [0x312+0x4]
      [184]: "#00fcaa"  [0x316+0x4]
      [185]: "#24fcaa"  [0x31a+0x4]
      [186]: "#48fcaa"  [0x31e+0x4]
      [187]: "#6cfcaa"  [0x322+0x4]
      [188]: "#90fcaa"  [0x326+0x4]
      [189]: "#b4fcaa"  [0x32a+0x4]
      [190]: "#d8fcaa"  [0x32e+0x4]
      [191]: "#fcfcaa"  [0x332+0x4]
      [192]: "#0000ff"  [0x336+0x4]
      [193]: "#2400ff"  [0x33a+0x4]
      [194]: "#4800ff"  [0x33e+0x4]
      [195]: "#6c00ff"  [0x342+0x4]
      [196]: "#9000ff"  [0x346+0x4]
      [197]: "#b400ff"  [0x34a+0x4]
      [198]: "#d800ff"  [0x34e+0x4]
      [199]: "#fc00ff"  [0x352+0x4]
      [200]: "#0024ff"  [0x356+0x4]
      [201]: "#2424ff"  [0x35a+0x4]
      [202]: "#4824ff"  [0x35e+0x4]
      [203]: "#6c24ff"  [0x362+0x4]
      [204]: "#9024ff"  [0x366+0x4]
      [205]: "#b424ff"  [0x36a+0x4]
      [206]: "#d824ff"  [0x36e+0x4]
      [207]: "#fc24ff"  [0x372+0x4]
      [208]: "#0048ff"  [0x376+0x4]
      [209]: "#2448ff"  [0x37a+0x4]
      [210]: "#4848ff"  [0x37e+0x4]
      [211]: "#6c48ff"  [0x382+0x4]
      [212]: "#9048ff"  [0x386+0x4]
      [213]: "#b448ff"  [0x38a+0x4]
      [214]: "#d848ff"  [0x38e+0x4]
      [215]: "#fc48ff"  [0x392+0x4]
      [216]: "#006cff"  [0x396+0x4]
      [217]: "#246cff"  [0x39a+0x4]
      [218]: "#486cff"  [0x39e+0x4]
      [219]: "#6c6cff"  [0x3a2+0x4]
      [220]: "#906cff"  [0x3a6+0x4]
      [221]: "#b46cff"  [0x3aa+0x4]
      [222]: "#d86cff"  [0x3ae+0x4]
      [223]: "#fc6cff"  [0x3b2+0x4]
      [224]: "#0090ff"  [0x3b6+0x4]
      [225]: "#2490ff"  [0x3ba+0x4]
      [226]: "#4890ff"  [0x3be+0x4]
      [227]: "#6c90ff"  [0x3c2+0x4]
      [228]: "#9090ff"  [0x3c6+0x4]
      [229]: "#b490ff"  [0x3ca+0x4]
      [230]: "#d890ff"  [0x3ce+0x4]
      [231]: "#fc90ff"  [0x3d2+0x4]
      [232]: "#00b4ff"  [0x3d6+0x4]
      [233]: "#24b4ff"  [0x3da+0x4]
      [234]: "#48b4ff"  [0x3de+0x4]
      [235]: "#6cb4ff"  [0x3e2+0x4]
      [236]: "#90b4ff"  [0x3e6+0x4]
      [237]: "#b4b4ff"  [0x3ea+0x4]
      [238]: "#d8b4ff"  [0x3ee+0x4]
      [239]: "#fcb4ff"  [0x3f2+0x4]
      [240]: "#00d8ff"  [0x3f6+0x4]
      [241]: "#24d8ff"  [0x3fa+0x4]
      [242]: "#48d8ff"  [0x3fe+0x4]
      [243]: "#6cd8ff"  [0x402+0x4]
      [244]: "#90d8ff"  [0x406+0x4]
      [245]: "#b4d8ff"  [0x40a+0x4]
      [246]: "#d8d8ff"  [0x40e+0x4]
      [247]: "#fcd8ff"  [0x412+0x4]
      [248]: "#00fcff"  [0x416+0x4]
      [249]: "#24fcff"  [0x41a+0x4]
      [250]: "#48fcff"  [0x41e+0x4]
      [251]: "#6cfcff"  [0x422+0x4]
      [252]: "#90fcff"  [0x426+0x4]
      [253]: "#b4fcff"  [0x42a+0x4]
      [254]: "#d8fcff"  [0x42e+0x4]
      [255]: "#fcfcff"  [0x432+0x4]
    Pixel array — 8 rows of 12 bytes, bottom-up  [0x436+0x60]
